# CFO_Copilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  project-details.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  deploy.yml  lint_and_test.yml  publish.yml
docs/: chapter_01.md  chapter_02.md  index.md
src/app/: __init__.py  __main__.py  settings.py
src/app/api/: __init__.py  __main__.py  app.py  dependencies.py  schema.py
src/app/api/error_handlers/: __init__.py  generic.py  training.py
src/app/api/routes/: __init__.py
src/app/api/routes/health/: endpoints.py
src/app/api/routes/prediction/: __init__.py  endpoints.py  examples.py  schemas.py
src/app/api/routes/train/: __init__.py  endpoints.py  responses.py  schemas.py
src/app/domain/: __init__.py  base.py  ml_model.py  prediction_input.py  prediction_output.py
src/app/frontend/: __init__.py  __main__.py  home.py
src/app/frontend/pages/: 1_home.py  __init__.py  health.py  test.py
src/app/injections/: __init__.py  production.py  test.py
src/app/mappings/: api.py
src/app/playground/: test.ipynb
src/app/services/: __init__.py  helper.py
src/app/services/prediction/: __init__.py  exceptions.py  service.py
src/app/services/training/: __init__.py  exceptions.py  service.py
src/app/utils/: __init__.py  exampler.py
tests/: conftest.py
tests/api/: conftest.py
tests/api/routes/health/: test_health.py
tests/api/routes/health/__snapshots__/: test_health.ambr
tests/services/training/: conftest.py  test_training_service.py
