[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "app"
version = "0.0.0"
requires-python = "==3.12.*"
dependencies = [
    "fastapi==0.116.1",
    "granian==2.5.0",
    "stamina==25.1.0"
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "coverage==7.10.3"
]


[tool.coverage.run]
branch = true
parallel = true
source = ["app", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true